fixed search panel z-index

--- a/src/app/shared/components/search/search.component.scss
+++ b/src/app/shared/components/search/search.component.scss
@@ -9,6 +9,7 @@
     bottom: 0;
     background-color: rgba(0,0,0,.9);
     border: 10px solid var(--yellow);
+    z-index: 1000;
 
     .close-button {
         position: absolute;
